Fix primary field alignment

--- a/packages/dataviews/src/style.scss
+++ b/packages/dataviews/src/style.scss
@@ -263,7 +263,6 @@
 	color: $gray-700;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	display: block;
 	width: 100%;
 
 	a {
